--- a/main.html
+++ b/main.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 
+<!DOCTYPE html>
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Time and Space Complexity</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Understanding Time, Space, and Complexity</h1>
+    <p>
+        When analyzing algorithms, we often consider two important aspects: time complexity and space complexity. Time complexity refers to the amount of time an algorithm takes to run as a function of the input size. An algorithm is considered efficient if its time complexity grows at a reasonable rate as the input size increases, allowing it to handle larger inputs without excessive delays.
+    </p>
+    <p>
+        Space complexity, on the other hand, deals with the amount of memory an algorithm uses to solve a problem as a function of the input size. It's essential to manage memory usage, especially in resource-constrained environments. One common way to measure space complexity is using Big O notation, denoted as O(n), where 'n' represents the input size. For some algorithms, space complexity can be as critical as time complexity in determining their overall efficiency.
+        <b>Space Complexity</b> plays a crucial role in designing algorithms that make efficient use of memory resources while solving complex problems.
+    </p>
 </body>
-
 </html>
